--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "homepage": "https://github.com/molly/timeline-template#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "ejs": "^3.1.6",
-    "eleventy-sass": "^2.1.3",
+    "eleventy-sass": "^3.0.0-beta.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
