Update index.ejs to use module.exports from js data file correctly. EleventyPluginEjs
- `npm install @11ty/eleventy-plugin-ejs`

`npm run-script build` will now build the index.html correctly, though `npm run-script serve` doesn't seem to update the files being served.

Lots of debugging to get this working.

// In _data/mmyang.js
module.exports = {
    data1: "wat?",
    data2: ["dead", "beef"],
};

// In index.ejs
<body>
  <% console.log(mmyang) %>
  <% console.log(mmyang.data1) %>
  <% console.log(mmyang.default.data1) %>
  <% if (mmyang) { %>
    <p>mmyang found</p>
    <p>0, <%= mmyang %>!</p>
    <p>1, <%= mmyang.data1 %>!</p>
    <p>2, <%= mmyang.data2 %>!</p>
    <p>3, <%= mmyang.missingdata %>!</p>
    <p>4, <%= {mmyang} %>!</p>
    <p>5, <%= {mmyang}.data1 %>!</p>
  <% } else { %>
    <p>mmyang not found</p>
  <% } %>
</body>

This example doesn't seem to care if we use `<% %>` or `<%- -%>`, though there are reports that it could matter (https://github.com/11ty/eleventy/issues/1463#issuecomment-899581284).

--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "moment": "^2.29.1",
     "postcss": "^8.4.20"
+  },
+  "dependencies": {
+    "@11ty/eleventy-plugin-ejs": "^1.0.0"
   }
 }
