Reverting to Eleventy v2.0.1
Eleventy v3.0.0 and the required plugins led to several breakages that I tried to find fixes for but were ultimately not worth the effort.  Ultimately, more packages are switching over to be distributed as ES modules and the available versions of several key dependencies are not all compatible yet.

This version works with both `npm run-script build` and `npm run-script serve` and does not get the same errors or warnings as the previous version, while still producing the same index.html output.

--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
   },
   "homepage": "https://github.com/molly/timeline-template#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy": "^2.0.1",
     "autoprefixer": "^10.4.13",
     "ejs": "^3.1.6",
-    "eleventy-sass": "^3.0.0-beta.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
@@ -35,6 +34,6 @@
     "postcss": "^8.4.20"
   },
   "dependencies": {
-    "@11ty/eleventy-plugin-ejs": "^1.0.0"
+    "eleventy-sass": "^2.2.6"
   }
 }
